testsuite/tests/typecheck/should_fail/T19109.stderr

T19109.hs:6:4: error:
    Illegal visible type application in a pattern: ‘@Int’
      Both ScopedTypeVariables and TypeApplications are required to use this feature
